Implement endpoint for recalling token
